[gd_scene load_steps=4 format=3 uid="uid://bpjbvoudmd5qt"]

[ext_resource type="Script" path="res://entities/tower/tower.gd" id="1_xlceu"]
[ext_resource type="Texture2D" uid="uid://oprtih5lhajy" path="res://art/tower/tux.png" id="2_ddckq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_47qsh"]

[node name="Tower" type="Node2D"]
script = ExtResource("1_xlceu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
texture = ExtResource("2_ddckq")

[node name="SightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
scale = Vector2(30, 30)
shape = SubResource("CircleShape2D_47qsh")

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="ShootProgressBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = 40.0
offset_right = 50.0
offset_bottom = 67.0
show_percentage = false

[connection signal="area_entered" from="SightArea" to="." method="_on_sight_area_area_entered"]
[connection signal="area_exited" from="SightArea" to="." method="_on_sight_area_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
